--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,7 @@
+@media (max-width: 630px) {
+  #ctcfooter { position: absolute; bottom: 0 !important; width: 100%; }
+}
+
 .custom-bg {
   background-color: #d1c3e6;
 }
