--- a/assets/css/footer.css
+++ b/assets/css/footer.css
@@ -55,6 +55,11 @@ span {
   }
 }
 
+@media (max-width: 500px) {
+    #ctcftr {position: relative !important; margin-top: 100px;}
+    /* .footerContainer {padding-top: 50px;} */
+}
+
 .footerNav {
   margin: 30px 0;
 }
