--- a/assets/css/sponsori.css
+++ b/assets/css/sponsori.css
@@ -98,12 +98,21 @@
 }
 
 .grid-link {
+  color:#7b28ae;
+  font-size: 150%;
+  text-decoration: none;
   position: absolute;
   bottom: 1rem;
   left: 50%;
   transform: translateX(-50%);
   opacity: 0;
   transition: opacity 0.3s ease;
+}
+
+.partner-square:hover .grid-link:hover,
+.partner-square:hover .grid-link:active {
+  color:#7b28ae;
+  text-decoration: underline;
 }
 
 .partner-square:hover .grid-link {
