--- a/assets/css/sponsori.css
+++ b/assets/css/sponsori.css
@@ -98,11 +98,13 @@
 }
 
 .grid-link {
+  width: 100%;
+  text-align: center;
   color:#7b28ae;
-  font-size: 150%;
+  font-size: min(1.5rem, 10vw);
   text-decoration: none;
   position: absolute;
-  bottom: 1rem;
+  bottom: 0.7rem;
   left: 50%;
   transform: translateX(-50%);
   opacity: 0;
