--- a/assets/css/echipa.css
+++ b/assets/css/echipa.css
@@ -157,9 +157,9 @@
 }
 
 .box {
-  width: 230px;
-  margin: 20px;
-  padding: 30px 10px;
+  width: 14rem;
+  margin: 1.25rem;
+  padding: 2rem 0.5rem;
   background: #ececec;
   text-align: center;
   border-radius: 5px;
@@ -178,7 +178,7 @@
 }
 
 .box img {
-  width: 150px;
+  width: 160px;
   border-radius: 10%;
   padding: 5px;
   margin-bottom: 15px;
