--- a/assets/css/footer.css
+++ b/assets/css/footer.css
@@ -14,8 +14,7 @@ footer {
 
 .footerContainer {
   width: 100%;
-  height: 25vh;
-  height: 25dvh;
+  height: 10vh;
   display: flex;
   align-items: center;
   justify-content: space-evenly; 
@@ -26,7 +25,7 @@ footer {
   height: 100%;
   display: flex;
   background-image: url(/assets/images/Branding\ Zenith/Sigla_alb.png);
-  background-size: 70%;
+  background-size: 50%;
   background-repeat: no-repeat;
   background-position: center center;
   align-items: center;
@@ -34,8 +33,7 @@ footer {
 }
 
 .footer-img {
-  height: 10vh;
-  height: 10dvh;
+  height: 2vh;
 }
 
 .copyright-text {
@@ -59,13 +57,32 @@ footer {
 }
 
 @media (max-width: 1300px) {
+  .footerContainer {
+    height: 15vh;
+  }
   .socialIcons {
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: repeat(2, 1fr);
   }
   .footer-logo {
     background-image: url(/assets/images/Branding\ Zenith/Logo_alb.png);
-    background-size: min(50%, 8em);
+    background-size: max(20%, 6em);
+  }
+
+  .copyright-text p {
+    font-size: 1.2rem;
+    color: #fff;
+    visibility: hidden;
+    position: relative;
+  }
+  
+  .copyright-text p::after {
+    content: "©2025";
+    visibility: visible;
+    position: absolute;
+    left: 0;
+    right: 0;
+    text-align: center;
   }
 }
 
