--- a/assets/css/rezultate.css
+++ b/assets/css/rezultate.css
@@ -1,27 +1,40 @@
-.custom-bg {
-  background-color: #d1c3e6;
+:root {
+  --primary: #7b28ae;
+  --primary-gradient: linear-gradient(to right, #7b28ae, #ba12aa);
+  --bg-light: #d1c3e6;
+}
+
+.custom-bg, .main, .timeline, .container-r ul li {
+  background-color: var(--bg-light);
 }
 
 .main {
   position: relative;
-  padding-top: 80px;
-  margin-bottom: 0;
-  padding-bottom: 20px;
+  padding: 80px 0 20px;
   min-height: calc(100vh - 60px);
-  background: #d1c3e6;
 }
 
 .iconita {
-  height: 50px;
+  display: block;
+  max-height: 100%;
+  max-width: 100%;
+  object-fit: contain;
+}
+
+.icon-box {
+  position: absolute;
+  top: 50%;
+  right: 40px;
+  transform: translateY(-50%);
   width: 50px;
+  height: 50px;
 }
 
 .cards {
-  width: 100%;
-  padding: 35px 20px;
   display: grid;
   grid-template-columns: repeat(4, 1fr);
-  grid-gap: 20px;
+  gap: 20px;
+  padding: 35px 20px;
 }
 
 .card-s {
@@ -31,20 +44,15 @@
   justify-content: space-between;
   background: #fff;
   border-radius: 10px;
-  box-shadow: 0 7px 25px 0 rgba(0, 0, 0, 0.08);
+  box-shadow: 0 7px 25px rgba(0,0,0,0.08);
   position: relative;
+  transition: 0.3s;
 }
 
-.number {
+.number, .number-special {
   font-size: 45px;
   font-weight: 500;
-  color: #7b28ae;
-}
-
-.number-special {
-  font-size: 45px;
-  font-weight: 500;
-  color: #7b28ae;
+  color: var(--primary);
 }
 
 .card-name {
@@ -52,22 +60,14 @@
   font-weight: 600;
 }
 
-.icon-box {
-  position: absolute;
-  top: 50%;
-  transform: translateY(-50%);
-  right: 40px;
-}
-
 .icon-box i {
   font-size: 45px;
-  color: #7b28ae;
+  color: var(--primary);
 }
 
 .card-s:hover {
   transform: scale(1.03);
-  transition: 0.3s;
-  background: #7b28ae;
+  background: var(--primary);
 }
 
 .card-s:hover .number,
@@ -77,52 +77,8 @@
   color: #fff;
 }
 
-@media screen and (max-width: 768px) {
-  .cards {
-    grid-template-columns: repeat(2, 1fr);
-  }
-  .iconita {
-    height: 40px;
-    width: 40px;
-  }
-}
-
-@media screen and (max-width: 480px) {
-  .cards {
-    grid-template-columns: 1fr;
-    padding: 10px;
-  }
-
-  .card-s {
-    flex-direction: column;
-    align-items: flex-start;
-    padding: 15px;
-    margin-bottom: 20px;
-  }
-
-  .number,
-  .number-special,
-  .icon-box i {
-    font-size: 30px;
-  }
-
-  .iconita {
-    height: 20px;
-    width: 20px;
-  }
-}
-
-@media screen and (max-width: 768px) {
-  .number,
-  .icon-box i {
-    font-size: 30px;
-  }
-}
-
+/* Timeline */
 .timeline {
-  width: 100%;
-  height: auto;
-  background-color: #d1c3e6;
   padding-bottom: 200px;
   display: grid;
   place-items: center;
@@ -131,31 +87,30 @@
 .timeline .heading {
   font-size: 30px;
   font-weight: 500;
-  color: #7b28ae;
-  position: relative;
+  color: var(--primary);
   margin-bottom: 80px;
+  position: relative;
 }
 
 .heading::after {
+  content: "";
   position: absolute;
-  content: " ";
   width: 50%;
   height: 4px;
   left: 50%;
   bottom: -5px;
-  background-image: linear-gradient(to right, #7b28ae, #ba12aa);
+  background-image: var(--primary-gradient);
   transform: translateX(-50%);
 }
 
 .container-r {
   width: 80%;
-  height: auto;
   position: relative;
 }
 
 .container-r::after {
+  content: "";
   position: absolute;
-  content: " ";
   width: 4px;
   height: 100%;
   background-image: linear-gradient(to bottom, #7b28ae, #ba12aa);
@@ -163,18 +118,17 @@
 
 .container-r ul {
   list-style: none;
+  padding: 0;
 }
 
 .container-r ul li {
   width: 50%;
-  height: auto;
   padding: 15px 20px;
-  background-color: #d1c3e6;
   box-shadow: 1px 1px 25px #000;
   border-radius: 10px;
   margin-bottom: 30px;
-  z-index: 99;
   position: relative;
+  z-index: 99;
 }
 
 .timeline-container {
@@ -185,9 +139,9 @@
 
 .timeline-image {
   width: 100%;
-  height: 100%;
-  max-height: 200px;
+  height: auto;
   max-width: 200px;
+  max-height: 200px;
 }
 
 .timeline-text {
@@ -201,24 +155,19 @@
   text-align: right;
 }
 
-.container-r ul li:nth-child(odd) .date {
-  right: 20px;
-}
-
 .container-r ul li:nth-child(even) {
   float: right;
   clear: left;
   transform: translateX(30px);
 }
 
-.container-r ul li:nth-child(4) {
-  margin-bottom: 0;
-}
+.container-r ul li:nth-child(odd) .date { right: 20px; }
+.container-r ul li:nth-child(even) .date { left: 20px; }
 
 .container-r ul li .title-r {
   font-size: 22px;
   font-weight: 500;
-  color: #7b28ae;
+  color: var(--primary);
 }
 
 ul li p {
@@ -235,125 +184,79 @@ ul li .date {
   height: 35px;
   border-radius: 20px;
   color: #fff;
-  background-image: linear-gradient(to right, #7b28ae, #ba12aa);
+  background-image: var(--primary-gradient);
   display: grid;
   place-items: center;
   font-size: 15px;
 }
 
-.container-r ul li .point {
-  width: 30px;
-  height: 30px;
-  /* background-color: #ba12a996; */
-  /* left: 103.2%; */
-  /* border-radius: 50%; */
+.point, .point-2 {
   position: absolute;
-  top: 10px;
-}
-
-.container-r ul li .point-2 {
-  width: 50px;
-  height: 50px;
-  /* left: 101.25%; */
-  z-index: -2;
-  opacity: 0.7;
-  position: absolute;
-  top: 0px;
-}
-
-/* .container-r ul li .circle::after {
-  content: " ";
-  width: 15px;
-  height: 15px;
-  background-color: #7b28ae;
-  border-radius: 50%;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-} */
-
-/* .container-r ul li:nth-child(odd) .circle {
-  right: -32px;
-  transform: translate(50%, -50%);
-}
-
-.container-r ul li:nth-child(even) .circle {
-  left: -28px;
-  transform: translate(-50%, -50%);
-} */
-
-.container-r ul li:nth-child(odd) .point {
-  right: -32px;
   top: 0;
-  transform: translate(50%, -50%);
 }
 
-.container-r ul li:nth-child(odd) .point-2 {
-  right: -82px;
-  transform: translate(-50%, -50%);
-}
+.point { width: 30px; height: 30px; }
+.point-2 { width: 50px; height: 50px; opacity: 0.7; z-index: -2; }
 
-.container-r ul li:nth-child(even) .point {
-  left: -58px;
-  top: 0;
-  transform: translate(50%, -50%);
-}
+.container-r ul li:nth-child(odd) .point { right: -32px; transform: translate(50%,-50%); }
+.container-r ul li:nth-child(odd) .point-2 { right: -82px; transform: translate(-50%,-50%); }
+.container-r ul li:nth-child(even) .point { left: -58px; transform: translate(50%,-50%); }
+.container-r ul li:nth-child(even) .point-2 { left: -28px; transform: translate(-50%,-50%); }
 
-.container-r ul li:nth-child(even) .point-2 {
-  left: -28px;
-  transform: translate(-50%, -50%);
-}
+/* Breakpoints */
+@media (max-width:1224px) { .container-r { width: 85%; } }
 
-@media screen and (max-width: 1224px) {
-  .container-r {
-    width: 85%;
-  }
-}
-
-@media screen and (max-width: 993px) {
+@media (max-width:993px) {
   .container-r {
     width: 80%;
     transform: translateX(15px);
   }
-  .container-r::after {
-    left: 2px;
-  }
+  .container-r::after { left: 2px; }
   .container-r ul li {
     width: 100%;
     float: none;
-    clear: none;
     margin-bottom: 80px;
   }
-  .timeline-container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-  }
-  .timeline-image {
-    max-width: 100%;
-    height: auto;
-  }
-  .timeline-text {
-    padding-top: 20px;
-  }
+  .timeline-container { flex-direction: column; }
+  .timeline-image { max-width: 100%; }
+  .timeline-text { padding-top: 20px; }
   .container-r ul li:nth-child(odd) {
     transform: translateX(0);
     text-align: left;
   }
-  .container-r ul li:nth-child(odd) .date {
-    left: 20px;
-  }
-  .container-r ul li:nth-child(odd) .point {
-    left: -28px;
-    transform: translate(-50%, -50%);
-  }
+  .container-r ul li:nth-child(even) .date,
+  .container-r ul li:nth-child(odd) .date { left: 0px; }
+  .container-r ul li:nth-child(even) .point,
+  .container-r ul li:nth-child(even) .point-2,
+  .container-r ul li:nth-child(odd) .point,
   .container-r ul li:nth-child(odd) .point-2 {
-    left: -28px;
-    transform: translate(-50%, -50%);
+    left: -10px;
+    top: -5px;
+    transform: translate(-50%,-50%);
   }
-  .container-r ul li:nth-child(even) {
-    transform: translateX(0);
+  .container-r ul li:nth-child(even),
+  .container-r ul li:nth-child(odd) {
+    transform: translateX(14px);
   }
+}
+
+@media (max-width:768px) {
+  .cards { grid-template-columns: repeat(2, 1fr); }
+  .icon-box { width: 40px; height: 40px; }
+  .number, .icon-box i { font-size: 30px; }
+}
+
+@media (max-width:480px) {
+  .cards {
+    grid-template-columns: 1fr;
+    padding: 10px;
+  }
+  .card-s {
+    flex-direction: column;
+    align-items: flex-start;
+    padding: 15px;
+    margin-bottom: 20px;
+  }
+  .number, .number-special, .icon-box i { font-size: 30px; }
+  .icon-box { width: 20px; height: 20px; }
 }
