--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -31,21 +31,48 @@
 
 /* Hero Section */
 
+@keyframes slideFromRight {
+  from {
+    transform: translateX(100%);
+  }
+  to {
+    transform: translateX(0);
+  }
+}
+
 .hero-section {
-  background: url("../images/Cover pagina principala/Cover_site_2025.png")
+  background: url("../images/Cover pagina principala/hero_img_background.png")
     no-repeat center;
   background-size: cover;
   overflow: hidden;
-}
-
-.hero-section .container {
-  height: 100vh;
+  height: 100dvh;
   z-index: 1;
-  position: relative;
+  display: flex;
+  flex-direction: row-reverse;
 }
 
-.hero-section h1 {
-  font-size: 1.5em;
+.animatie-robot {
+  width: 50vw;
+  height: 100dvh;
+  z-index: 1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  animation: slideFromRight 0.8s ease-out forwards;
+}
+
+.render-robot {
+  background: url("../images/Cover\ pagina\ principala/render_robot.png") no-repeat center;
+  background-size: contain;
+  overflow: hidden;
+  width: 100%;
+  height: 50%;
+  z-index: 1;
+}
+
+.animatie-text h1{
+  color: #fff;
+  font-size: 3em;
 }
 
 .span-h {
@@ -60,11 +87,6 @@
       no-repeat center;
     background-size: cover;
     width: 100%;
-  }
-
-  .hero-section .container {
-    height: 70vh;
-    padding: 40px 15px;
   }
 }
 
