--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -31,6 +31,17 @@
 
 /* Hero Section */
 
+@keyframes slideFromLeft {
+  from {
+    transform: translateX(-100%);
+    opacity: 0;
+  }
+  to {
+    transform: translateX(0);
+    opacity: 1;
+  }
+}
+
 @keyframes slideFromRight {
   from {
     transform: translateX(100%);
@@ -46,15 +57,19 @@
   background-size: cover;
   overflow: hidden;
   height: 100dvh;
-  z-index: 1;
   display: flex;
-  flex-direction: row-reverse;
+  flex-direction: column;
+}
+
+.main-hero {
+  height: 90%;
+  display: flex;
+  flex-direction: row;
 }
 
 .animatie-robot {
-  width: 50vw;
-  height: 100dvh;
-  z-index: 1;
+  width: 60%;
+  height: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -66,13 +81,23 @@
   background-size: contain;
   overflow: hidden;
   width: 100%;
-  height: 50%;
-  z-index: 1;
+  height: 60%;
 }
 
-.animatie-text h1{
+.animatie-text {
+  width: 40%;
+  height: 100%;
   color: #fff;
-  font-size: 3em;
+  font-family: 'Prompt';
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  animation: slideFromLeft 0.8s ease-out forwards;
+}
+
+.animatie-text h1 {
+  font-size: 4em;
+  margin: 0;
 }
 
 .span-h {
@@ -88,6 +113,57 @@
     background-size: cover;
     width: 100%;
   }
+}
+
+/* Waves */
+
+@keyframes wave1Moving {
+  0% {
+    transform: translateX(-100%);
+  }
+  100% {
+    transform: translateX(0);
+  }
+}
+
+@keyframes wave2Moving {
+  0% {
+    transform: translateX(0);
+  }
+  100% {
+    transform: translateX(100%);
+  }
+}
+
+.wave1,
+.wave2 {
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  overflow-x: hidden;
+  line-height: 0;
+  transform: rotate(180deg);
+}
+
+.wave1 svg,
+.wave2 svg {
+  position: relative;
+  display: block;
+  width: calc(100% + 1.3px);
+}
+
+.wave1 .shape-fill,
+.wave2 .shape-fill  {
+  fill: #D1C3E6;
+}
+
+.wave1 svg {
+  animation: wave1Moving 25s infinite;
+}
+
+.wave2 svg {
+  animation: wave2Moving 25s infinite;
 }
 
 /* I'm a */
