--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -108,12 +108,24 @@
   font-weight: 600;
 }
 
-@media (max-width: 1500px) {
-  .hero-section {
-    background: url("/assets/images/Cover pagina principala/hero_img_background.png")
-      no-repeat center;
-    background-size: cover;
+@media (max-width: 1000px) {
+  .main-hero {
+    flex-direction: column-reverse;
+  }
+  
+  .animatie-robot {
     width: 100%;
+    height: 80%;
+  }
+
+  .animatie-text {
+    width: 100%;
+    height: 20%;
+    align-items: flex-start;
+    justify-content: center;
+  }
+  .animatie-text h1 {
+    font-size: 2em;
   }
 }
 
