--- a/assets/css/galerie.css
+++ b/assets/css/galerie.css
@@ -2,6 +2,10 @@
   background-color: #d1c3e6;
 }
 
+.galerie-10 {
+  padding-top: 7em;
+}
+
 .section-title {
   text-align: center;
   margin-bottom: 30px;
