--- a/assets/css/navbar.css
+++ b/assets/css/navbar.css
@@ -1,5 +1,10 @@
 .navbar {
-  background-color: #fff;
+  background-color: rgba(255, 255, 255, 0.5);
+  backdrop-filter: blur(5px) saturate(150%);
+  -webkit-backdrop-filter: blur(5px) saturate(150%);
+  border: 1px solid rgba(255, 255, 255, 0.5);
+  box-shadow: 0 8px 32px rgba(0, 0, 0, 0.25);
+
   height: 80px;
   margin: 20px;
   border-radius: 16px;
