--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -81,14 +81,16 @@ h1, h2, h3 { font-family: 'Prompt', monospace; }
   justify-content: center;
   align-items: center;
   animation: slideFromRight 0.8s ease-out forwards;
+  position: relative;
+  z-index: 100;
 }
 
 .render-robot {
   background: url("../images/Cover\ pagina\ principala/render_robot.png") no-repeat center;
-  background-size: contain;
+  background-size: 75% 75%;
   overflow: hidden;
   width: 100%;
-  height: 60%;
+  height: 100%;
 }
 
 .animate-text-on-load {
@@ -187,11 +189,12 @@ h1, h2, h3 { font-family: 'Prompt', monospace; }
 .wave2 {
   position: absolute;
   left: 0;
-  bottom: 0;
+  bottom: 44px;
   width: 100%;
   overflow-x: hidden;
   line-height: 0;
-  transform: rotate(180deg);
+  transform: rotate(180deg) scaleY(1.5);
+  z-index: 10;
 }
 
 .wave1 svg,
