--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -87,7 +87,7 @@ h1, h2, h3 { font-family: 'Prompt', monospace; }
 
 .render-robot {
   background: url("../images/Cover\ pagina\ principala/render_robot.png") no-repeat center;
-  background-size: 75% 75%;
+  background-size: 75%;
   overflow: hidden;
   width: 100%;
   height: 100%;
@@ -129,7 +129,11 @@ h1, h2, h3 { font-family: 'Prompt', monospace; }
   .main-hero {
     flex-direction: column-reverse;
   }
-  
+
+  .render-robot {
+    background-size: contain;
+  }
+
   .animatie-robot {
     width: 100%;
     height: 80%;
@@ -189,11 +193,11 @@ h1, h2, h3 { font-family: 'Prompt', monospace; }
 .wave2 {
   position: absolute;
   left: 0;
-  bottom: 44px;
+  bottom: -1px;
   width: 100%;
   overflow-x: hidden;
   line-height: 0;
-  transform: rotate(180deg) scaleY(1.5);
+  transform: rotate(180deg);
   z-index: 10;
 }
 
