--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -70,6 +70,7 @@ h1, h2, h3 { font-family: 'Prompt', monospace; }
   height: 100vh; width: auto;
   position: relative;
   display: flex;
+  align-items: center;
   flex-direction: row;
   overflow: hidden;
 }
@@ -135,18 +136,19 @@ h1, h2, h3 { font-family: 'Prompt', monospace; }
   }
 
   .animatie-robot {
-    width: 100%;
-    height: 80%;
+    width: 80%;
+    height: 70%;
   }
 
   .animatie-text {
     width: 100%;
-    height: 20%;
+    height: 40%;
     align-items: flex-start;
     justify-content: center;
   }
+
   .animatie-text h1 {
-    font-size: 2em;
+    font-size: 3.5em;
   }
 }
 
