--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -88,7 +88,7 @@ h1, h2, h3 { font-family: 'Prompt', monospace; }
 
 .render-robot {
   background: url("../images/Cover\ pagina\ principala/render_robot.png") no-repeat center;
-  background-size: 70%;
+  background-size: min(70vw, 70vh);
   overflow: hidden;
   width: 100%;
   height: 100%;
@@ -137,6 +137,7 @@ h1, h2, h3 { font-family: 'Prompt', monospace; }
 
   .animatie-robot {
     width: 80%;
+    padding-top: 7em;
     height: 70%;
   }
 
