--- a/assets/css/bttb.css
+++ b/assets/css/bttb.css
@@ -115,7 +115,7 @@ html {
   display: grid;
   place-items: center;
   font-size: 25px;
-  color: #7b28ae;
+  color: var(--primary);
 }
 
 .btnEntrance {
