--- a/assets/css/echipa.css
+++ b/assets/css/echipa.css
@@ -3,10 +3,6 @@
   padding: 0;
 }
 
-.custom-bg {
-  background: #d1c3e6;
-}
-
 .team-area {
   display: grid;
   align-items: center;
@@ -17,25 +13,6 @@
 .section-title {
   text-align: center;
   margin-bottom: 30px;
-}
-
-.custom-span {
-  font-size: 35px;
-  font-weight: 600;
-  color: #7b28ae;
-  position: relative;
-  margin-bottom: 80px;
-}
-
-.custom-span::after {
-  position: absolute;
-  content: " ";
-  width: 50%;
-  height: 4px;
-  left: 50%;
-  bottom: -5px;
-  background-image: linear-gradient(to right, #7b28ae, #ba12aa);
-  transform: translateX(-50%);
 }
 
 .about-us {
@@ -138,7 +115,7 @@
 }
 
 .item-link {
-  border: 2px solid #7b28ae;
+  border: 2px solid var(--primary);
   padding: 10px 30px;
   font-size: 18px;
   font-weight: 500;
@@ -148,12 +125,12 @@
 }
 
 .item-link:hover {
-  background: #7b28ae;
+  background: var(--primary);
   color: #fff;
 }
 
 .menu-active {
-  background: #7b28ae;
+  background: var(--primary);
   color: #fff;
 }
 
@@ -222,7 +199,7 @@
 }
 
 .box ul li a .bi-instagram:hover {
-  color: #7b28ae;
+  color: var(--primary);
 }
 
 @media (max-width: 1200px) {
