--- a/assets/css/formular.css
+++ b/assets/css/formular.css
@@ -22,7 +22,7 @@ form {
 }
 
 .form-button {
-  background-color: #7b28ae;
+  background-color: var(--primary);
   color: #fff;
 }
 
@@ -32,7 +32,7 @@ form {
 }
 
 .form-control:focus {
-  border-color: #7b28ae;
+  border-color: var(--primary);
   box-shadow: 0 0 0 0.2rem rgba(123, 40, 174, 0.35);
   outline: none;
 }
