--- a/assets/css/galerie.css
+++ b/assets/css/galerie.css
@@ -1,7 +1,4 @@
-.custom-bg {
-  background-color: #d1c3e6;
-}
-
+/* Ultima galerie adaugata, pentru a o separa de navbar */
 .galerie-10 {
   padding-top: 7em;
 }
@@ -10,25 +7,6 @@
   text-align: center;
   margin-bottom: 30px;
   padding-top: 20px;
-}
-
-.custom-span {
-  font-size: 35px;
-  font-weight: 600;
-  color: #7b28ae;
-  position: relative;
-  margin-bottom: 80px;
-}
-
-.custom-span::after {
-  position: absolute;
-  content: " ";
-  width: 50%;
-  height: 4px;
-  left: 50%;
-  bottom: -5px;
-  background-image: linear-gradient(to right, #7b28ae, #ba12aa);
-  transform: translateX(-50%);
 }
 
 .img-gallery {
