--- a/assets/css/sponsori.css
+++ b/assets/css/sponsori.css
@@ -1,11 +1,3 @@
-.custom-bg {
-  background-color: #d1c3e6;
-}
-
-.custom-span {
-  font-size: clamp(25px, 2.5vw + 1rem, 34px);
-}
-
 /* Titlu */
 
 .section-title {
@@ -13,25 +5,6 @@
   margin-bottom: 30px;
   padding-top: 20px;
   padding-bottom: 20px;
-}
-
-.custom-span {
-  font-size: 35px;
-  font-weight: 600;
-  color: #7b28ae;
-  position: relative;
-  margin-bottom: 80px;
-}
-
-.custom-span::after {
-  position: absolute;
-  content: " ";
-  width: 50%;
-  height: 4px;
-  left: 50%;
-  bottom: -5px;
-  background-image: linear-gradient(to right, #7b28ae, #ba12aa);
-  transform: translateX(-50%);
 }
 
 /* Parteneri */
@@ -60,7 +33,7 @@
   width: 400px;
 }
 
-/* Tabelul */
+/* Tabelul partenerilor */
 
 .partner-row {
   display: grid;
@@ -101,7 +74,7 @@
 .grid-link {
   width: 100%;
   text-align: center;
-  color:#7b28ae;
+  color:var(--primary);
   font-size: min(1.5rem, 10vw);
   text-decoration: none;
   position: absolute;
@@ -114,14 +87,16 @@
 
 .partner-square:hover .grid-link:hover,
 .partner-square:hover .grid-link:active {
-  color:#7b28ae;
+  color:var(--primary);
   text-decoration: underline;
 }
 
 .partner-square:hover .grid-link {
   opacity: 1;
 }
+
 /* Colorarea tabelului */
+
 .platinum .partner-square {
   background: linear-gradient(
     135deg,
