--- a/assets/css/scroll-bar.css
+++ b/assets/css/scroll-bar.css
@@ -4,6 +4,6 @@
 }
 
 ::-webkit-scrollbar-thumb {
-  background: linear-gradient(transparent, #7b28ae);
+  background: linear-gradient(transparent, var(--primary));
   border-radius: 6px;
 }
