--- a/assets/css/blog.css
+++ b/assets/css/blog.css
@@ -48,7 +48,7 @@ body {
 
 .blog-box {
   width: 70%;
-  background-color: #fff;
+  background-color: var(--card-background);
   border: 5px solid rgba(0, 0, 0, 0.05);
   border-radius: 2%;
   margin-bottom: 80px;
@@ -73,24 +73,23 @@ body {
   flex-direction: column;
 }
 
+.blog-text span {
+  color: var(--dark-text-color);
+}
+
 .blog-text .custom-span {
-  color: var(--primary);
+  color: var(--primary) !important;
   font-size: 0.9rem;
 }
 
 .blog-text .blog-title {
   font-size: 1.3rem;
   font-weight: 500;
-  color: #272727;
-}
-
-.blog-text .blog-title:hover {
-  color: var(--primary);
-  transition: all ease 0.3s;
+  color: var(--dark-text-color);
 }
 
 .blog-text p {
-  color: #9b9b9b;
+  color: var(--dark-text-color);
   font-size: 0.9rem;
   overflow: hidden;
   text-overflow: ellipsis;
@@ -98,7 +97,7 @@ body {
 }
 
 .blog-text a {
-  color: #0f0f0f;
+  color: #ba12aa;
 }
 
 .blog-text a:hover {
@@ -109,7 +108,7 @@ body {
 .text {
   font-size: 25px;
   line-height: 1.5;
-  color: #555;
+  color: var(--dark-text-color);
   margin-bottom: 20px;
 }
 
@@ -123,7 +122,7 @@ body {
 }
 
 .read-more-text--show {
-  color: #9b9b9b;
+  color: var(--dark-text-color);
   font-size: 0.9rem;
   display: flex;
 }
