--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,6 +4,7 @@
   --primary-gradient: linear-gradient(to right, #7b28ae, #ba12aa);
   --light-text-color: #fff;
   --dark-text-color: #000;
+  --card-background: #eee;
 }
 
 /* Dark mode */
@@ -556,7 +557,7 @@ p {
 .container-p .box-container .box {
   box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
   border-radius: 5px;
-  background: var(--bg-light);
+  background: var(--card-background);
   text-align: center;
   padding: 30px 20px;
   transition: all 0.3s ease;
@@ -578,13 +579,7 @@ p {
 .container-p .box-container .box:hover {
   box-shadow: 0 10px 15px rgba(0, 0, 0, 0.2);
   transform: scale(1.05);
-  background: var(--primary);
   transition: all ease 0.3s;
-}
-
-.container-p .box-container .box:hover h3,
-.container-p .box-container .box:hover p {
-  color: var(--light-text-color);
 }
 
 .box span {
