--- a/assets/css/sovazenith.css
+++ b/assets/css/sovazenith.css
@@ -18,14 +18,20 @@
     from { transform: scale(1.1); }
     to { transform: scale(1); }
 }
-.slowzmin { animation: slowzoomin 1s ease-in-out forwards; }
+
+.slowzmin {
+    animation: slowzoomin 1s ease-in-out forwards;
+}
 
 @keyframes goup {
     0% { transform: translateY(0); }
     20% { transform: translateY(25px); opacity: 1;}
     100%{ transform: translateY(-60dvh); opacity: 0;}
 }
-.up { animation: goup 1.3s ease forwards; }
+
+.up {
+    animation: goup 1.3s ease forwards;
+}
 
 @keyframes opacityout {
     0% { opacity: 1 !important; }
@@ -38,15 +44,15 @@
     50% { transform: translateX(calc(-2 * var(--trXmove))); }
     100% { transform: translateX(var(--trXmove)); }
 }
-.lerpX { animation: movesides 3s cubic-bezier(0.445, 0.05, 0.55, 0.95) infinite;}
 
+.lerpX {
+    animation: movesides 3s cubic-bezier(0.445, 0.05, 0.55, 0.95) infinite;
+}
 
 body {
     scroll-behavior: smooth !important;
     overflow-x: hidden;
 }
-
-
 
 .tranzit-wrapper {
     overflow: hidden;
