--- a/assets/css/navbar.css
+++ b/assets/css/navbar.css
@@ -100,6 +100,8 @@
   top: 50%;
   left: 4em;
   transform: translateY(-50%);
+  display: flex;
+  align-items: center;
 }
 
 /* Language related */
