--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -47,7 +47,7 @@ h1, h2, h3 { font-family: 'Prompt', monospace; }
 .section-title {
   text-align: center;
   margin-bottom: 30px;
-  padding-top: 50px;
+  padding-top: 150px !important;
 }
 
 /* Hero Section */
