NEW ARTICLES + traducere (incomplet)
+ other small fixes

--- a/assets/css/blog.css
+++ b/assets/css/blog.css
@@ -124,7 +124,7 @@ body {
 .read-more-text--show {
   color: var(--dark-text-color);
   font-size: 0.9rem;
-  display: flex;
+  display: block;
 }
 
 .custom-span {
