--- a/assets/css/navbar.css
+++ b/assets/css/navbar.css
@@ -36,7 +36,7 @@
 }
 
 .nav-item {
-  padding-bottom: 2em;
+  top: -100%;
   position: relative;
 }
 
@@ -62,21 +62,30 @@
   margin-top: 5em;
   background: linear-gradient(
     90deg,
-    #fff 0%,
-    transparent 100%
+    #ffffffa0 0%,
+    #ffffff40 100%
   );
-  
+  overflow: hidden;
   box-shadow: 0 8px 32px rgba(0, 0, 0, 0.25);
   border: solid 1px #fff;
   border-radius: 1em;
   transition: opacity 0.5s ease;
   height: max(42dvh, 25em);
-  width: calc(100vw - 2.5em);
+  width: calc(100vw - 3.1em);
+}
+
+.offcanvas-backdrop::before {
+  content: "";
+  position: absolute;
+  inset: 0;
+  backdrop-filter: blur(5px);
+  background: var(--navbar-bg);
+  transform: scale(1.1);
+  z-index: -1;
 }
 
 .offcanvas-backdrop.show {
   opacity: 1;
-  backdrop-filter: blur(20px);
   transition: all 0.8 ease;
 }
 
@@ -94,6 +103,7 @@
 }
 
 .offcanvas-body {
+  width: calc(100vw - 3.1em);
   top: 1em;
   left: 1em;
   padding-bottom: max(calc(42dvh - 1em), 24em);
@@ -105,8 +115,8 @@
   height: 100%;
   position: absolute;
   top: 50%;
-  left: 4em;
-  transform: translateY(-50%);
+  left: 10%;
+  transform: translateY(50%);
   display: flex;
   align-items: center;
 }
@@ -193,7 +203,7 @@
   }
 
   .offcanvas-body ul {
-    top: 50%;
+    top: -1em;
     right: 0px;
     left: auto;
   }
